# Alteza-Proefopdracht

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
alteza_proefopdracht/: asgi.py  settings.py  urls.py  wsgi.py
alteza_proefopdracht/apps/gitcommits/: admin.py  apps.py  forms.py  github.py  models.py  tests.py  urls.py  views.py
alteza_proefopdracht/apps/gitcommits/management/commands/: post_reset_db.py
alteza_proefopdracht/apps/gitcommits/migrations/: 0001_initial.py  0002_gituser.py
alteza_proefopdracht/apps/gitcommits/services/: __init__.py  commits.py
alteza_proefopdracht/apps/gitcommits/tests/: test_github.py  test_models.py
alteza_proefopdracht/apps/theme/: apps.py
alteza_proefopdracht/apps/theme/static/js/: commit_results.jsx
alteza_proefopdracht/apps/theme/static_src/src/: styles.css
alteza_proefopdracht/apps/theme/templates/: base.html  index.html
alteza_proefopdracht/apps/theme/templates/account/: login.html  profile.html
alteza_proefopdracht/apps/theme/templates/allauth/elements/: button.html  form.html  h1.html  panel.html
alteza_proefopdracht/apps/theme/templates/allauth/layouts/: base.html
alteza_proefopdracht/apps/theme/templates/partials/: theme_head.html  theme_scripts.html  theme_toggle.html
alteza_proefopdracht/locale/nl/LC_MESSAGES/: django.mo  django.po
alteza_proefopdracht/settings/: .env.example  base.py  local.py
