[project]
name = "alteza-proefopdracht"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.3",
    "django-environ>=0.13.0",
    "flake8>=7.3.0",
    "httpx>=0.28.1",
    "pygithub>=2.9.0",
    "pytest>=9.0.2",
    "pytest-django>=4.12.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.9",
]
